Add README.md and move babel to package

--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
     "name": "battleships",
     "type": "module",
-    "jest": {
-        "transform": {
-            ".js": "babel-jest"
-        }
-    },
     "scripts": {
         "test": "jest --coverage"
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env"
+        ]
     },
     "devDependencies": {
         "jest": "^29.7.0"
     },
     "dependencies": {
-        "@babel/preset-env": "^7.24.5",
-        "babel-jest": "^29.7.0"
+        "@babel/preset-env": "^7.24.5"
     }
 }
